--- a/Home.html
+++ b/Home.html
@@ -96,7 +96,7 @@
 
     <!------------------Services--------------------->
     <section class="services" id="services">
-            <div>
+            <div class="center">
                 <h3>O QUE EU FAÇO?</h3>
             </div>
 
@@ -104,12 +104,51 @@
                 <div class="row">
                     <i class='bx bx-cast'></i>
                     <h3>Programador web</h3>
-                    <p>ou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
+                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
                         Desenvolvo soluções web e mobile para clientes de todo mundo.
                         Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
-
-
                 </div>
+
+                <div class="row">
+                    <i class='bx bx-layer' ></i>
+                    <h3>Programador web</h3>
+                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
+                        Desenvolvo soluções web e mobile para clientes de todo mundo.
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                </div>
+
+                <div class="row">
+                    <i class='bx bx-user-voice' ></i>
+                    <h3>Programador web</h3>
+                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
+                        Desenvolvo soluções web e mobile para clientes de todo mundo.
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                </div>
+
+                <div class="row">
+                    <i class='bx bx-desktop' ></i>
+                    <h3>Programador web</h3>
+                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
+                        Desenvolvo soluções web e mobile para clientes de todo mundo.
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                </div>
+
+                <div class="row">
+                    <i class='bx bx-camera' ></i>
+                    <h3>Programador web</h3>
+                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
+                        Desenvolvo soluções web e mobile para clientes de todo mundo.
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                </div>
+
+                <div class="row">
+                    <i class='bx bx-line-chart'></i>
+                    <h3>Programador web</h3>
+                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
+                        Desenvolvo soluções web e mobile para clientes de todo mundo.
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                </div>
+
             </div>
 
         
