--- a/Home.html
+++ b/Home.html
@@ -106,7 +106,7 @@
                     <h3>Programador web</h3>
                     <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
                         Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
                 </div>
 
                 <div class="row">
@@ -114,7 +114,7 @@
                     <h3>Programador web</h3>
                     <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
                         Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
                 </div>
 
                 <div class="row">
@@ -122,7 +122,7 @@
                     <h3>Programador web</h3>
                     <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
                         Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
                 </div>
 
                 <div class="row">
@@ -130,7 +130,7 @@
                     <h3>Programador web</h3>
                     <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
                         Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
                 </div>
 
                 <div class="row">
@@ -138,7 +138,7 @@
                     <h3>Programador web</h3>
                     <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
                         Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
                 </div>
 
                 <div class="row">
@@ -146,13 +146,20 @@
                     <h3>Programador web</h3>
                     <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
                         Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação</h3>
+                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
                 </div>
 
             </div>
-
-        
     </section>
+
+     <!------------------CTA--------------------->
+     <section class="cta">
+
+        <h4>Tens algum projecto em mente?</h4>
+        <h2>Entre em Contacto comigo</h2>
+        <a href="#Contact">Contacto</a>
+
+     </section>
 
     <link rel="stylesheet" href="JavaScript/script.js">
    
