--- a/Home.html
+++ b/Home.html
@@ -156,10 +156,26 @@
      <section class="cta">
 
         <h4>Tens algum projecto em mente?</h4>
-        <h2>Entre em Contacto comigo</h2>
-        <a href="#Contact">Contacto</a>
+        <h2>Entre em contacto comigo</h2>
+        <a href="#" class="btn">Contrate-me</a>
 
      </section>
+
+
+    <!------------------Start resume--------------------->
+     <section class="resume" id="resume">
+        <div class="center">
+            <h3>Educação e Experiência Proficional</h3>
+
+        </div>
+
+     </section>
+
+    <div class="resume-content">
+        <div class="box">
+            <h6>Salif Faustino</h6>
+        </div>
+    </div>
 
     <link rel="stylesheet" href="JavaScript/script.js">
    
