--- a/Home.html
+++ b/Home.html
@@ -17,7 +17,7 @@
     <!-----------------Header-------------------->
 
     <header>
-        <a href="#" class="logo">Portifo<span>lio</span></a>
+        <a href="#" class="logo">Portifó<span>lio</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
@@ -41,7 +41,7 @@
             <h2>Salif Faustino</h1>
             <h6>Sou Programador <span>Full-stack</span></h6>
             <p>
-                Desenvolvo projetos de pequena, média e grande escala para clintes finais. Tenho maior paixão pela área de back-end e desenvolvimento de soluções que desenvolvam a minha capacidade de raciocínio.
+                Desenvolvo projetos de pequena, média e grande escala para clintes finais. Tenho maior paixão pelo desenvolvimento de soluções que desenvolvam a minha capacidade de raciocínio.
             </p>
 
             <a href="#" class="btn"> Descarrega o meu CV</a>
