--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="#home">Home</a></li>
+            <li><a  href="#home">Home</a></li>
             <li><a href="#about">Sobre</a></li>
             <li><a href="#resume">Serviços</a></li>
             <li><a href="#contact">Contacto</a></li>
@@ -41,7 +41,7 @@
             <h2>Salif Faustino</h1>
             <h6>Sou Programador <span>Full-stack</span></h6>
             <p>
-                Desenvolvo projetos de pequena, média e grande escala para clintes finais. Tenho maior paixão pelo desenvolvimento de soluções que desenvolvam a minha capacidade de raciocínio.
+                Desenvolvo projetos de pequena, média e grande escala para clintes finais. Tenho maior paixão pelo desenvolvimento de soluções que ajudam a desenvolver a minha capacidade de raciocínio.
             </p>
 
             <a href="#" class="btn"> Descarrega o meu CV</a>
@@ -248,10 +248,7 @@
 
           </div>
     
-
-  
-
-    <link rel="stylesheet" href="JavaScript/script.js">
-   
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="JavaScript/script.js"></script>
 </body>
 </html>
