--- a/Index.html
+++ b/Index.html
@@ -170,10 +170,12 @@
 
         <div class="resume-content">
             <div class="box">
-                <h6>Junho 2022 -  Presente</h6>
+                <h6>Abril 2022 -  Presente</h6>
                 <h4>Programador OutSystems</h4>
-                <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                    Desenvolvo soluções web e mobile para clientes de todo mundo.</p>
+                <p>Sou programador OutSystems na empresa Bensuade S.A. 
+                    Fui responsável por desenvolver a aplicação que permite gerir todos equipamentos de voz e dados, 
+                    visto que a gestão encontrava-se obsolenta, não otimizada e acentava a utilização de ficheiros na utilização de ficheiros MS Excel e base de dados MS Access. 
+                    A aplicação encontrava-se em produção e está prespetivado que seja vendida para outras empresas.</p>
                 <h5>Bensuade S.A</h5>
             </div>
 
