--- a/Index.html
+++ b/Index.html
@@ -172,9 +172,8 @@
             <div class="box">
                 <h6>Abril 2022 -  Presente</h6>
                 <h4>Programador OutSystems</h4>
-                <p>Sou programador OutSystems na empresa Bensuade S.A. 
-                    Fui responsável por desenvolver a aplicação que permite gerir todos equipamentos de voz e dados, 
-                    visto que a gestão encontrava-se obsolenta, não otimizada e acentava a utilização de ficheiros na utilização de ficheiros MS Excel e base de dados MS Access. 
+                <p>Sou programador OutSystems na empresa Bensuade S.A 
+                    Fui responsável por desenvolver a aplicação que permite gerir todos equipamentos de voz e dados.  
                     A aplicação encontrava-se em produção e está prespetivado que seja vendida para outras empresas.</p>
                 <h5>Bensuade S.A</h5>
             </div>
@@ -182,8 +181,8 @@
             <div class="box">
                 <h6>Fevereiro 2022</h6>
                 <h4>Licenciatura em Informática</h4>
-                <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                    Desenvolvo soluções web e mobile para clientes de todo mundo.</p>
+                <p>Lincencie-me em Informática na Universidade dos Açores em Fevereiro de 2022. 
+                    Ao longo da minha formação realizei o estágio curicular na empresa Azores Hive utilizando a plataforma OutSystems.</p>
                 <h5>Universidade dos Açores</h5>
             </div>
 
