--- a/Index.html
+++ b/Index.html
@@ -182,32 +182,31 @@
                 <h6>Fevereiro 2022</h6>
                 <h4>Licenciatura em Informática</h4>
                 <p>Lincencie-me em Informática na Universidade dos Açores em Fevereiro de 2022. 
-                    Ao longo da minha formação realizei o estágio curicular na empresa Azores Hive utilizando a plataforma OutSystems.</p>
+                    Ao longo da minha formação realizei o estágio curricular na empresa Azores Hive utilizando a plataforma OutSystems.</p>
                 <h5>Universidade dos Açores</h5>
             </div>
 
             <div class="box">
-                <h6>Fevereiro 2022</h6>
-                <h4>Licenciatura em Informática</h4>
-                <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                    Desenvolvo soluções web e mobile para clientes de todo mundo.</p>
-                <h5>Universidade dos Açores</h5>
+                <h6>Janeiro 2018 - Presente</h6>
+                <h4>Criador de conteúdo digital</h4>
+                <p>Sou criador de conteúdo digital sobre Matemática e Programação. 
+                    Esta iniciativa surgiu com o principal objetivo de ajudar pessoas que tenha dificuldade em perceber as mesmas</p>
+                <h5>Youtuber</h5>
             </div>
 
             <div class="box">
-                <h6>Fevereiro 2022</h6>
-                <h4>Licenciatura em Informática</h4>
-                <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                    Desenvolvo soluções web e mobile para clientes de todo mundo.</p>
-                <h5>Universidade dos Açores</h5>
+                <h6>Outubro 2019 - Julho 2020</h6>
+                <h4>Gestão de redes socias e Design</h4>
+                <p>Fui colaborador de Açores T-shirt, 
+                onde fui responsável por desenhar imagens recorendo ao Photoshop e CorelDRAW, aplicar técnicas de sublimação, efetuar estapagens.</p>
+                <h5>Açores T-shirt</h5>
             </div>
 
             <div class="box">
-                <h6>Fevereiro 2022</h6>
-                <h4>Licenciatura em Informática</h4>
-                <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                    Desenvolvo soluções web e mobile para clientes de todo mundo.</p>
-                <h5>Universidade dos Açores</h5>
+                <h6>Janeiro 2013 - Junho 2016</h6>
+                <h4>Explicador de Matemática</h4>
+                <p>Fui explicador de Matemática de forma Autónomo.Desenvolvia capacidades de raciocínio aos meus educandos.</p>
+                <h5>Autónomo </h5>
             </div>
 
             <div class="box">
