--- a/Index.html
+++ b/Index.html
@@ -172,11 +172,13 @@
             <div class="box">
                 <h6>Abril 2022 -  Presente</h6>
                 <h4>Programador OutSystems</h4>
-                <p>Sou programador OutSystems na empresa Bensuade S.A 
+                <p>Sou programador OutSystems na empresa Bensuade S.A. 
                     Fui responsável por desenvolver a aplicação que permite gerir todos equipamentos de voz e dados.  
                     A aplicação encontrava-se em produção e está prespetivado que seja vendida para outras empresas.</p>
                 <h5>Bensuade S.A</h5>
             </div>
+
+           
 
             <div class="box">
                 <h6>Fevereiro 2022</h6>
@@ -184,6 +186,15 @@
                 <p>Lincencie-me em Informática na Universidade dos Açores em Fevereiro de 2022. 
                     Ao longo da minha formação realizei o estágio curricular na empresa Azores Hive utilizando a plataforma OutSystems.</p>
                 <h5>Universidade dos Açores</h5>
+            </div>
+
+            <div class="box">
+                <h6>Outubro 2021 - Fevereiro 2022</h6>
+                <h4>Estágio curricular Azores Hive</h4>
+                <p>Realizei o meu estágio curricular na empresa Azores Hive. 
+                    Ao longo do estágio tive formação em OutSystems e 
+                    fui responsável por desenvolver toda lógica de negócio da aplicação para gerir os equipamentos de voz de dados do Grupo Bensuade.</p>
+                <h5>Azores Hive</h5>
             </div>
 
             <div class="box">
@@ -209,13 +220,7 @@
                 <h5>Autónomo </h5>
             </div>
 
-            <div class="box">
-                <h6>Fevereiro 2022</h6>
-                <h4>Licenciatura em Informática</h4>
-                <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                    Desenvolvo soluções web e mobile para clientes de todo mundo.</p>
-                <h5>Universidade dos Açores</h5>
-            </div>
+            
    
         </div>
      </section>
@@ -234,7 +239,6 @@
                     <input type="email" name="" id="" placeholder="Endereço de Email" required>
                     <textarea name="" id="" cols="30" rows="10" placeholder="Descrição do projeto"></textarea>
                     <input type="submit" name="" value="Enviar" class="send-btn">
-
 
                 </form>
             </div>
