--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
             <h2>Salif Faustino</h1>
             <h6>Sou Programador <span>Full-stack</span></h6>
             <p>
-                Desenvolvo projetos de pequena, média e grande escala para clintes finais. Tenho maior paixão pelo desenvolvimento de soluções que ajudam a desenvolver a minha capacidade de raciocínio.
+                Desenvolvo projetos de pequena, média e grande escala para clientes finais. Tenho maior paixão pelo desenvolvimento de soluções que ajudam a desenvolver a minha capacidade de raciocínio.
             </p>
 
             <a href="#" class="btn"> Descarrega o meu CV</a>
@@ -69,13 +69,13 @@
         <div class="about-text">
             <h3>SOBRE MIM</h3>
             <h2> Sou programador Full-stack com mais de 3 anos de experiência.</h2>
-            <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
+            <p>Sou programador Full-stack com mais de 3 anos de experiência. Sou de nacionalidade moçambicana. 
                 Desenvolvo soluções web e mobile para clientes de todo mundo.
                 Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação. </p>
 
             <div class="count">
-                <a href=""> <span>10K</span> Projetos completos.</a>
-                <a href=""> <span>10K</span> Tecnologias utilizadas.</a>
+                <a href=""> <span>10</span> Projetos completos.</a>
+                <a href=""> <span>8</span> Tecnologias utilizadas.</a>
             </div>
     
     
@@ -104,49 +104,41 @@
                 <div class="row">
                     <i class='bx bx-cast'></i>
                     <h3>Programador web</h3>
-                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
+                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. 
                         Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
+                        </h3>
                 </div>
 
                 <div class="row">
                     <i class='bx bx-layer' ></i>
-                    <h3>Programador web</h3>
-                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                        Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
+                    <h3>Criador de conteúdo digital</h3>
+                    <p>Sou criador de conteúdo digital sobre Matemática e Programação. 
+                        Esta iniciativa surgiu com o principal objetivo de ajudar pessoas com dificuldades nestas áreas.</h3>
                 </div>
 
                 <div class="row">
                     <i class='bx bx-user-voice' ></i>
-                    <h3>Programador web</h3>
-                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                        Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
+                    <h3>Explicador</h3>
+                    <p>Sou explicador de Matemática e Programação. 
+                       Dedico o tempo foram do trabalho proficional para dar explicações, com objetivo de ajudar às pessoas com dificuldades em perceber o universo da Matemática e da programação.</h3>
                 </div>
 
                 <div class="row">
                     <i class='bx bx-desktop' ></i>
-                    <h3>Programador web</h3>
-                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                        Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
+                    <h3>Design  de interfaces</h3>
+                    <p>Apesar de ter mais aptidões para o desenvolvimento back-end, tenho dado maior foco no desenvolvimento de interfaces com o principal objectivo de tornar-me num programador completo.</h3>
                 </div>
 
                 <div class="row">
                     <i class='bx bx-camera' ></i>
-                    <h3>Programador web</h3>
-                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                        Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
+                    <h3>Editor de vídeo e imagem</h3>
+                    <p>Sou editor amador de vídeo e de imagens, esta  necessidade surgiu no contexto de criação do projeto de criação de conteúdos digitais.</h3>
                 </div>
 
                 <div class="row">
                     <i class='bx bx-line-chart'></i>
-                    <h3>Programador web</h3>
-                    <p>Sou programador Full-stack com  mais de 3 anos de experiência. Sou de nalicionalidade Moçambicana. 
-                        Desenvolvo soluções web e mobile para clientes de todo mundo.
-                        Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação.</h3>
+                    <h3>Analista de dados</h3>
+                    <p>Sou analista de dados.Tenho capacidade de transformar os dados em informações que apoiam a tomada de decisões de negócios</h3>
                 </div>
 
             </div>
@@ -239,6 +231,7 @@
                     <input type="email" name="" id="" placeholder="Endereço de Email" required>
                     <textarea name="" id="" cols="30" rows="10" placeholder="Descrição do projeto"></textarea>
                     <input type="submit" name="" value="Enviar" class="send-btn">
+
 
                 </form>
             </div>
