--- a/Index.html
+++ b/Index.html
@@ -185,7 +185,7 @@
                 <h4>Estágio curricular Azores Hive</h4>
                 <p>Realizei o meu estágio curricular na empresa Azores Hive. 
                     Ao longo do estágio tive formação em OutSystems e 
-                    fui responsável por desenvolver toda lógica de negócio da aplicação para gerir os equipamentos de voz de dados do Grupo Bensuade.</p>
+                    fui responsável por desenvolver toda lógica de negócio da aplicação para gerir os equipamentos de voz de dados do Grupo Bensaude.</p>
                 <h5>Azores Hive</h5>
             </div>
 
@@ -193,15 +193,15 @@
                 <h6>Janeiro 2018 - Presente</h6>
                 <h4>Criador de conteúdo digital</h4>
                 <p>Sou criador de conteúdo digital sobre Matemática e Programação. 
-                    Esta iniciativa surgiu com o principal objetivo de ajudar pessoas que tenha dificuldade em perceber as mesmas</p>
+                    Esta iniciativa surgiu com o principal objetivo de ajudar pessoas que tenha dificuldade nestas áreas.</p>
                 <h5>Youtuber</h5>
             </div>
 
             <div class="box">
                 <h6>Outubro 2019 - Julho 2020</h6>
                 <h4>Gestão de redes socias e Design</h4>
-                <p>Fui colaborador de Açores T-shirt, 
-                onde fui responsável por desenhar imagens recorendo ao Photoshop e CorelDRAW, aplicar técnicas de sublimação, efetuar estapagens.</p>
+                <p>Fui colaborador da Açores T-shirt. 
+                Fui responsável por desenhar imagens recorendo ao Photoshop e CorelDRAW, aplicar técnicas de sublimação e efetuar estapagens.</p>
                 <h5>Açores T-shirt</h5>
             </div>
 
