--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>PortifólioSalif</title>
 </head>
 <body>
 
@@ -70,7 +70,7 @@
             <h3>SOBRE MIM</h3>
             <h2> Sou programador Full-stack com mais de 3 anos de experiência.</h2>
             <p>Sou programador Full-stack com mais de 3 anos de experiência. Sou de nacionalidade moçambicana. 
-                Desenvolvo soluções web e mobile para clientes de todo mundo.
+                Desenvolvo soluções Web e Mobile para clientes de todo mundo.
                 Gosto de aprender de forma continua e explorar novos conceitos e padrões de programação. </p>
 
             <div class="count">
@@ -103,7 +103,7 @@
             <div class="service--content">
                 <div class="row">
                     <i class='bx bx-cast'></i>
-                    <h3>Programador web</h3>
+                    <h3>Programador Web</h3>
                     <p>Sou programador Full-stack com  mais de 3 anos de experiência. 
                         Desenvolvo soluções web e mobile para clientes de todo mundo.
                         </h3>
@@ -120,7 +120,7 @@
                     <i class='bx bx-user-voice' ></i>
                     <h3>Explicador</h3>
                     <p>Sou explicador de Matemática e Programação. 
-                       Dedico o tempo foram do trabalho proficional para dar explicações, com objetivo de ajudar às pessoas com dificuldades em perceber o universo da Matemática e da programação.</h3>
+                       Dedico o tempo foram do trabalho profissional para dar explicações, com objetivo de ajudar às pessoas com dificuldades em perceber o universo da Matemática e da programação.</h3>
                 </div>
 
                 <div class="row">
@@ -157,7 +157,7 @@
     <!------------------Start resume--------------------->
      <section class="resume" id="resume">
         <div class="center">
-            <h3>Educação e Experiência Proficional</h3>
+            <h3>Educação e Experiência Profissional</h3>
         </div>
 
         <div class="resume-content">
