--- a/Index.html
+++ b/Index.html
@@ -20,13 +20,11 @@
         <a href="#" class="logo">Portifó<span>lio</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
-        <ul class="navbar">
-            <li><a  href="#home">Home</a></li>
+        <ul id="nav" class="navbar">
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">Sobre</a></li>
             <li><a href="#resume">Serviços</a></li>
             <li><a href="#contact">Contacto</a></li>
-            
-            
         </ul>
     </header>
 
