--- a/Index.html
+++ b/Index.html
@@ -10,14 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <title>PortifólioSalif</title>
+    <title>PortefólioSalif</title>
 </head>
 <body>
 
     <!-----------------Header-------------------->
 
     <header>
-        <a href="#" class="logo">Portifó<span>lio</span></a>
+        <a href="#" class="logo">Portefó<span>lio</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul id="nav" class="navbar">
