--- a/Index.html
+++ b/Index.html
@@ -74,8 +74,8 @@
     
     
             <div class="main-btn">
-                <a href="#" class="btn">Contacto</a>
-                <a href="#" class="btn">Portefólio</a>
+                <a href="#home" class="btn">Contacto</a>
+                <a href="#contact" class="btn">Portefólio</a>
             </div>
         </div>
 
