--- a/Index.html
+++ b/Index.html
@@ -218,10 +218,10 @@
             <div class="contact-form">
                 <form action="">
 
-                    <input type="" name=""  placeholder="Nome" required>
-                    <input type="email" name="" id="" placeholder="Endereço de Email" required>
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Descrição do projeto"></textarea>
-                    <input type="submit" name="" value="Enviar" class="send-btn">
+                    <input type="" name="senderName"  placeholder="Nome" required>
+                    <input type="email" name="" id="sender" placeholder="Endereço de Email" required>
+                    <textarea name="" id="content" cols="30" rows="10" placeholder="Descrição do projeto"></textarea>
+                    <input type="submit" name="" value="Enviar" class="send-btn" onclick="sendMail()">
 
 
                 </form>
@@ -238,5 +238,6 @@
     
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="JavaScript/script.js"></script>
+    <script src="JavaScript/SendEmail.js"></script>
 </body>
 </html>
