--- a/Index.html
+++ b/Index.html
@@ -239,5 +239,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="JavaScript/script.js"></script>
     <script src="JavaScript/SendEmail.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    
 </body>
 </html>
