--- a/Index.html
+++ b/Index.html
@@ -74,8 +74,8 @@
     
     
             <div class="main-btn">
-                <a href="#home" class="btn">Contacto</a>
-                <a href="#contact" class="btn">Portefólio</a>
+                <a href="#contact" class="btn">Contacto</a>
+                <a href="#home" class="btn">Portefólio</a>
             </div>
         </div>
 
@@ -140,7 +140,7 @@
 
         <h4>Tens algum projecto em mente?</h4>
         <h2>Entre em contacto comigo</h2>
-        <a href="#" class="btn">Contrate-me</a>
+        <a href="#contact" class="btn">Contrate-me</a>
 
      </section>
 
@@ -221,7 +221,7 @@
                     <input type="" name="senderName"  placeholder="Nome" required>
                     <input type="email" name="" id="sender" placeholder="Endereço de Email" required>
                     <textarea name="" id="content" cols="30" rows="10" placeholder="Descrição do projeto"></textarea>
-                    <input type="submit" name="" value="Enviar" class="send-btn" onclick="sendMail()">
+                    <input type="submit" name="" value="Enviar" class="send-btn">
 
 
                 </form>
